--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rvm:
   - 1.9.3
   - 2.0.0
 env:
+  - RAILS_VERSION=4.0.0.rc1
   - RAILS_VERSION=3.2.13
   - RAILS_VERSION=3.1.12
   - RAILS_VERSION=3.0.20
@@ -26,6 +27,10 @@ matrix:
       env: RAILS_VERSION=master
     - rvm: 1.9.2
       env: RAILS_VERSION=master
+    - rvm: 1.8.7
+      env: RAILS_VERSION=4.0.0.rc1
+    - rvm: 1.9.2
+      env: RAILS_VERSION=4.0.0.rc1
   allow_failures:
     - env: RAILS_VERSION=master
     - env: RAILS_VERSION=3-2-stable
