--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ matrix:
       env: RAILS_VERSION=4.0.0.rc1
   allow_failures:
     - env: RAILS_VERSION=master
+    - env: RAILS_VERSION=4.0.0.rc1
     - env: RAILS_VERSION=3-2-stable
     - env: RAILS_VERSION=3-1-stable
     - env: RAILS_VERSION=3-0-stable
