--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ rvm:
   - 1.9.3
   - 2.0.0
 env:
-  - RAILS_VERSION=4.0.0.rc1
+  - RAILS_VERSION=4.0.0
   - RAILS_VERSION=3.2.13
   - RAILS_VERSION=3.1.12
   - RAILS_VERSION=3.0.20
@@ -33,12 +33,8 @@ matrix:
     - rvm: 1.9.2
       env: RAILS_VERSION=4-0-stable
     - rvm: 1.8.7
-      env: RAILS_VERSION=4.0.0.rc1
+      env: RAILS_VERSION=4.0.0
     - rvm: 1.9.2
-      env: RAILS_VERSION=4.0.0.rc1
+      env: RAILS_VERSION=4.0.0
   allow_failures:
     - env: RAILS_VERSION=master
-    - env: RAILS_VERSION=4.0.0.rc1
-    - env: RAILS_VERSION=3-2-stable
-    - env: RAILS_VERSION=3-1-stable
-    - env: RAILS_VERSION=3-0-stable
