--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ rvm:
   - 1.9.2
   - 1.9.3
   - 2.0.0
+  - 2.1.0
 env:
   - RAILS_VERSION=4.0.2
   - RAILS_VERSION=3.2.16
@@ -22,6 +23,10 @@ matrix:
     - rvm: 2.0.0
       env: RAILS_VERSION=3.0.20
     - rvm: 2.0.0
+      env: RAILS_VERSION=3-0-stable
+    - rvm: 2.1.0
+      env: RAILS_VERSION=3.0.20
+    - rvm: 2.1.0
       env: RAILS_VERSION=3-0-stable
     # 4.0.x is not supported on MRI 1.8.7 or 1.9.2
     - rvm: 1.8.7
