--- a/.travis.yml
+++ b/.travis.yml
@@ -43,3 +43,8 @@ matrix:
       env: RAILS_VERSION=4.0.2
   allow_failures:
     - env: RAILS_VERSION=master
++before_install:
+  - gem update bundler
+  - bundle --version
+  - gem update --system 2.1.11
+  - gem --version
