--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ rvm:
   - 1.8.7
 env:
   - RAILS_VERSION=master
+  - RAILS_VERSION=4.1.0.rc1
   - RAILS_VERSION=4.0.2
   - RAILS_VERSION=4-0-stable
   - RAILS_VERSION=3.2.16
@@ -24,10 +25,6 @@ matrix:
       env: RAILS_VERSION=3.0.20
     # 4.0.x is not supported on MRI 1.8.7 or 1.9.2
     - rvm: 1.8.7
-      env: RAILS_VERSION=master
-    - rvm: 1.9.2
-      env: RAILS_VERSION=master
-    - rvm: 1.8.7
       env: RAILS_VERSION=4.0.2
     - rvm: 1.9.2
       env: RAILS_VERSION=4.0.2
@@ -35,6 +32,15 @@ matrix:
       env: RAILS_VERSION=4-0-stable
     - rvm: 1.9.2
       env: RAILS_VERSION=4-0-stable
+    # 4.1.x is not supported on MRI 1.8.7 or 1.9.2
+    - rvm: 1.8.7
+      env: RAILS_VERSION=master
+    - rvm: 1.9.2
+      env: RAILS_VERSION=master
+    - rvm: 1.8.7
+      env: RAILS_VERSION=4.1.0.rc1
+    - rvm: 1.9.2
+      env: RAILS_VERSION=4.1.0.rc1
   allow_failures:
     - env: RAILS_VERSION=master
 before_install:
