--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,15 @@ before_install:
   - gem install bundler -v=1.5.3
   - alias bundle="bundle _1.5.3_"
 rvm:
-  - 2.1.0
+  - 2.1
   - 2.0.0
   - 1.9.3
   - 1.9.2
   - 1.8.7
 env:
   - RAILS_VERSION=master
-  - RAILS_VERSION=4.1.0.rc1
+  - RAILS_VERSION=4.1.0
+  - RAILS_VERSION=4-1-stable
   - RAILS_VERSION=4.0.4
   - RAILS_VERSION=4-0-stable
   - RAILS_VERSION=3.2.17
@@ -21,10 +22,10 @@ env:
   - RAILS_VERSION=3.0.20
 matrix:
   exclude:
-    # 3.0.x is not supported on MRI 2.0.0
+    # 3.0.x is not supported on MRI 2.0+
     - rvm: 2.0.0
       env: RAILS_VERSION=3.0.20
-    - rvm: 2.1.0
+    - rvm: 2.1
       env: RAILS_VERSION=3.0.20
     # 4.0.x is not supported on MRI 1.8.7 or 1.9.2
     - rvm: 1.8.7
@@ -37,13 +38,18 @@ matrix:
       env: RAILS_VERSION=4-0-stable
     # 4.1.x is not supported on MRI 1.8.7 or 1.9.2
     - rvm: 1.8.7
-      env: RAILS_VERSION=master
+      env: RAILS_VERSION=4.1.0
     - rvm: 1.9.2
-      env: RAILS_VERSION=master
+      env: RAILS_VERSION=4.1.0
     - rvm: 1.8.7
-      env: RAILS_VERSION=4.1.0.rc1
+      env: RAILS_VERSION=4-1-stable
     - rvm: 1.9.2
-      env: RAILS_VERSION=4.1.0.rc1
+      env: RAILS_VERSION=4-1-stable
+    # master is not supported on MRI 1.8.7 or 1.9.2
+    - rvm: 1.8.7
+      env: RAILS_VERSION=master
+    - rvm: 1.9.2
+      env: RAILS_VERSION=master
   allow_failures:
     - env: RAILS_VERSION=master
     # Until https://github.com/travis-ci/travis-ci/issues/2220 is fixed
