--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ rvm:
   - 2.0.0
   - 1.9.3
   - 1.9.2
-  - 1.8.7
+  - ruby-1.8.7
 env:
   - RAILS_VERSION=master
   - RAILS_VERSION=4.1.0
@@ -27,26 +27,26 @@ matrix:
       env: RAILS_VERSION=3.0.20
     - rvm: 2.1
       env: RAILS_VERSION=3.0.20
-    # 4.0.x is not supported on MRI 1.8.7 or 1.9.2
-    - rvm: 1.8.7
+    # 4.0.x is not supported on MRI ruby-1.8.7 or 1.9.2
+    - rvm: ruby-1.8.7
       env: RAILS_VERSION=4.0.4
     - rvm: 1.9.2
       env: RAILS_VERSION=4.0.4
-    - rvm: 1.8.7
+    - rvm: ruby-1.8.7
       env: RAILS_VERSION=4-0-stable
     - rvm: 1.9.2
       env: RAILS_VERSION=4-0-stable
-    # 4.1.x is not supported on MRI 1.8.7 or 1.9.2
-    - rvm: 1.8.7
+    # 4.1.x is not supported on MRI ruby-1.8.7 or 1.9.2
+    - rvm: ruby-1.8.7
       env: RAILS_VERSION=4.1.0
     - rvm: 1.9.2
       env: RAILS_VERSION=4.1.0
-    - rvm: 1.8.7
+    - rvm: ruby-1.8.7
       env: RAILS_VERSION=4-1-stable
     - rvm: 1.9.2
       env: RAILS_VERSION=4-1-stable
-    # master is not supported on MRI 1.8.7 or 1.9.2
-    - rvm: 1.8.7
+    # master is not supported on MRI ruby-1.8.7 or 1.9.2
+    - rvm: ruby-1.8.7
       env: RAILS_VERSION=master
     - rvm: 1.9.2
       env: RAILS_VERSION=master
