--- a/.travis.yml
+++ b/.travis.yml
@@ -14,35 +14,35 @@ rvm:
   - ruby-1.8.7
 env:
   - RAILS_VERSION=master
-  - RAILS_VERSION=4.1.0
+  - RAILS_VERSION='~> 4.1.0'
   - RAILS_VERSION=4-1-stable
-  - RAILS_VERSION=4.0.4
+  - RAILS_VERSION='~> 4.0.4'
   - RAILS_VERSION=4-0-stable
-  - RAILS_VERSION=3.2.17
+  - RAILS_VERSION='~> 3.2.17'
   - RAILS_VERSION=3-2-stable
-  - RAILS_VERSION=3.1.12
-  - RAILS_VERSION=3.0.20
+  - RAILS_VERSION='~> 3.1.12'
+  - RAILS_VERSION='~> 3.0.20'
 matrix:
   exclude:
     # 3.0.x is not supported on MRI 2.0+
     - rvm: 2.0.0
-      env: RAILS_VERSION=3.0.20
+      env: RAILS_VERSION='~> 3.0.20'
     - rvm: 2.1
-      env: RAILS_VERSION=3.0.20
+      env: RAILS_VERSION='~> 3.0.20'
     # 4.0.x is not supported on MRI ruby-1.8.7 or 1.9.2
     - rvm: ruby-1.8.7
-      env: RAILS_VERSION=4.0.4
+      env: RAILS_VERSION='~> 4.0.4'
     - rvm: 1.9.2
-      env: RAILS_VERSION=4.0.4
+      env: RAILS_VERSION='~> 4.0.4'
     - rvm: ruby-1.8.7
       env: RAILS_VERSION=4-0-stable
     - rvm: 1.9.2
       env: RAILS_VERSION=4-0-stable
     # 4.1.x is not supported on MRI ruby-1.8.7 or 1.9.2
     - rvm: ruby-1.8.7
-      env: RAILS_VERSION=4.1.0
+      env: RAILS_VERSION='~> 4.1.0'
     - rvm: 1.9.2
-      env: RAILS_VERSION=4.1.0
+      env: RAILS_VERSION='~> 4.1.0'
     - rvm: ruby-1.8.7
       env: RAILS_VERSION=4-1-stable
     - rvm: 1.9.2
