Work towards improving rspec-support script support.
rspec-rails has been a little different than the other repos for a
while. As the shared script setups are improving rspec-rails should
evolve to leverage these as much as possible.

Copy current support function and clone scripts. Update the run build
script to leverage the new scripts. Along the same lines, tweak the
travis build to be more inline as well.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ before_script:
   # Rails 4.x complains with a bundler rails binstub in PROJECT_ROOT/bin/
   - rm -f bin/rails
   - bundle exec rails --version
-script: "script/run_build 2>&1"
-bundler_args: "--binstubs --path ../bundle"
 before_install:
+  - "script/clone_all_rspec_repos"
   # Downgrade bundler to work around https://github.com/bundler/bundler/issues/3004
-  - gem install bundler -v=1.5.3
-  - alias bundle="bundle _1.5.3_"
+  # Note this doesn't work on JRUBY 2.0.0 mode so we don't do it
+  - if [ -z "$JRUBY_OPTS" ]; then gem install bundler -v=1.5.3 && alias bundle="bundle _1.5.3_"; fi
+bundler_args: "--binstubs --without documentation --path ../bundle"
+script: "script/run_build 2>&1"
 rvm:
   - 2.1.2
   - 2.1.1
@@ -62,3 +63,4 @@ matrix:
       env: RAILS_VERSION=master
   allow_failures:
     - env: RAILS_VERSION=master
+  fast_finish: true
