--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,97 +1,45 @@
-inherit_from: .rubocop_todo.yml
+inherit_from: .rubocop_rspec_base.yml
 
-AccessModifierIndentation:
-  EnforcedStyle: outdent
+# Over time we'd like to get this down, but this is what we're at now.
+LineLength:
+  Max: 186
 
-# "Use alias_method instead of alias"
-# We're fine with `alias`.
-Alias:
-  Enabled: false
+# Over time we'd like to get this down, but this is what we're at now.
+MethodLength:
+  Max: 50
 
-AlignParameters:
-  EnforcedStyle: with_first_parameter
+# We use spaces, so it's less of a change to stick with that.
+SpaceAroundEqualsInParameterDefault:
+  EnforcedStyle: space
 
-# "Avoid the use of the case equality operator ==="
-# We prefer using `Class#===` over `Object#is_a?` because `Class#===`
-# is less likely to be monkey patched than `is_a?` on a user object.
-CaseEquality:
-  Enabled: false
+################################################################################
+# Individual File Exclusions
+################################################################################
 
-CollectionMethods:
-  PreferredMethods:
-    reduce: 'inject'
+AllCops:
+  Exclude:
+    # Templates are really ERB which Rubocop does not parse
+    - 'lib/generators/rspec/*/templates/**/*'
 
-# We use YARD to enforce documentation. It works better than rubocop's
-# enforcement...rubocop complains about the places we re-open
-# `RSpec::Expectations` and `RSpec::Matchers` w/o having doc commments.
-Documentation:
-  Enabled: false
+FileName:
+  Exclude:
+    # We break convention here so that when bundler requires the gem, which
+    # uses the gem name, things work without user configuration.
+    - lib/rspec-rails.rb
 
-# We still support 1.8.7 which requires trailing dots
-DotPosition:
-  EnforcedStyle: trailing
+HandleExceptions:
+  Exclude:
+    # RSpec is tightly coupled to capybara right now, this should be
+    # re-evaluted in the future. For now we allow the empty rescue
+    - lib/rspec/rails/vendor/capybara.rb
 
-DoubleNegation:
-  Enabled: false
+IfUnlessModifier:
+  Exclude:
+    # Allow single line statement as the style matches the remainder of the file
+    - lib/rspec/rails/vendor/capybara.rb
 
-# each_with_object is unavailable on 1.8.7 so we have to disable this one.
-EachWithObject:
-  Enabled: false
-
-Encoding:
-  EnforcedStyle: when_needed
-
-FormatString:
-  EnforcedStyle: percent
-
-# As long as we support ruby 1.8.7 we have to use hash rockets.
-HashSyntax:
-  EnforcedStyle: hash_rockets
-
-# We can't use the new lambda syntax, since we still support 1.8.7.
-Lambda:
-  Enabled: false
-
-# Who cares what we all the argument for binary operator methods?
-OpMethod:
-  Enabled: false
-
-PercentLiteralDelimiters:
-  PreferredDelimiters:
-    '%':  ()      # double-quoted string
-    '%i': '[]'    # array of symbols
-    '%q': ()      # single-quoted string
-    '%Q': ()      # double-quoted string
-    '%r': '{}'    # regular expression pattern
-    '%s': ()      # a symbol
-    '%w': '[]'    # array of single-quoted strings
-    '%W': '[]'    # array of double-quoted strings
-    '%x': ()      # a shell command as a string
-
-# We have too many special cases where we allow generator methods or prefer a
-# prefixed predicate due to it's improved readability.
-PredicateName:
-  Enabled: false
-
-# On 1.8 `proc` is `lambda`, so we use `Proc.new` to ensure we get real procs
-# on all supported versions.
-# http://batsov.com/articles/2014/02/04/the-elements-of-style-in-ruby-number-12-proc-vs-proc-dot-new/
-Proc:
-  Enabled: false
-
-RedundantReturn:
-  AllowMultipleReturnValues: true
-
-# We haven't adopted the `fail` to signal exceptions vs `raise` for re-raises
-# convention.
-SignalException:
-  Enabled: false
-
-# We don't care about single vs double qoutes.
-StringLiterals:
-  Enabled: false
-
-TrivialAccessors:
-  AllowDSLWriters: true
-  AllowPredicates: true
-  ExactNameMatch: true
+PerlBackrefs:
+  Exclude:
+    # We probably can refactor the backref out, but for now excluding it since
+    # we can't use named matches in 1.8.7
+    - lib/generators/rspec/scaffold/scaffold_generator.rb
