--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ matrix:
       env: RAILS_VERSION='~> 3.0.20'
     - rvm: 2.1.3
       env: RAILS_VERSION='~> 3.0.20'
+    - rvm: 2.1.4
+      env: RAILS_VERSION='~> 3.0.20'
     # 4.x is not supported on MRI ruby-1.8.7 or 1.9.2
     - rvm: 1.8.7
       env: RAILS_VERSION='~> 4.0.4'
