--- a/.travis.yml
+++ b/.travis.yml
@@ -58,9 +58,13 @@ matrix:
     - rvm: 1.9.2
       env: RAILS_VERSION=4-1-stable
     - rvm: 1.8.7
-      env: RAILS_VERSION='~> 4.2.0.beta2'
+      env: RAILS_VERSION='~> 4.2.0.rc1'
     - rvm: 1.9.2
-      env: RAILS_VERSION='~> 4.2.0.beta2'
+      env: RAILS_VERSION='~> 4.2.0.rc1'
+    - rvm: 1.8.7
+      env: RAILS_VERSION=4-2-stable
+    - rvm: 1.9.2
+      env: RAILS_VERSION=4-2-stable
     # master is not supported on MRI ruby-1.8.7 or 1.9.2
     - rvm: 1.8.7
       env: RAILS_VERSION=master
