--- a/.travis.yml
+++ b/.travis.yml
@@ -89,3 +89,8 @@ matrix:
     - rvm: 2.2
       env: RAILS_VERSION='~> 3.1.12'
   fast_finish: true
+
+branches:
+  only:
+    - master
+    - /^\d+-\d+-maintenance$/
