Add Ruby 2.6 builds (#2110)
* Add Ruby 2.6 builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,12 +35,16 @@ script: "script/run_build 2>&1"
 matrix:
   include:
     # Rails dev / 6 builds >= 2.4.4
+    - rvm: 2.6.3
+      env: RAILS_VERSION=master
     - rvm: 2.5.3
       env: RAILS_VERSION=master
     - rvm: 2.4.4
       env: RAILS_VERSION=master
 
     # Rails 5.2 builds >= 2.2.2
+    - rvm: 2.6.3
+      env: RAILS_VERSION='~> 5.2.0'
     - rvm: 2.5.3
       env: RAILS_VERSION='~> 5.2.0'
     - rvm: 2.4.4
@@ -51,6 +55,8 @@ matrix:
       env: RAILS_VERSION='~> 5.2.0'
 
     # Rails 5.1 Builds >= 2.2.2
+    - rvm: 2.6.3
+      env: RAILS_VERSION='~> 5.1.0'
     - rvm: 2.5.3
       env: RAILS_VERSION='~> 5.1.0'
     - rvm: 2.4.4
@@ -61,6 +67,8 @@ matrix:
       env: RAILS_VERSION='~> 5.1.0'
 
     # Rails 5.0 Builds >= 2.2.2
+    - rvm: 2.6.3
+      env: RAILS_VERSION='~> 5.0.0'
     - rvm: 2.5.3
       env: RAILS_VERSION='~> 5.0.0'
     - rvm: 2.4.4
@@ -191,6 +199,8 @@ matrix:
       env: RAILS_VERSION='~> 3.0.20'
 
   allow_failures:
+    - rvm: 2.6.3
+      env: RAILS_VERSION=master
     - rvm: 2.5.3
       env: RAILS_VERSION=master
     - rvm: 2.4.4
