address rubocop offenses: (#2126)
- fix warnings for wrong namespaces
- fix safe navigation offense
- turn off frozen string literal cop

--- a/.rubocop_rspec_base.yml
+++ b/.rubocop_rspec_base.yml
@@ -153,6 +153,9 @@ Style/EmptyMethod:
 Style/FormatStringToken:
   Enabled: false
 
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
 Style/GuardClause:
   Enabled: false
 
