--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,10 @@ bundler_args: "--binstubs --path ../bundle --retry=3 --jobs=3"
 
 before_install:
   - script/update_rubygems_and_install_bundler
-  - script/downgrade_bundler_on_old_rails
   - script/clone_all_rspec_repos
 
 before_script:
-  # Rails 4.x complains with a bundler rails binstub in PROJECT_ROOT/bin/
+  # Rails 4+ complains with a bundler rails binstub in PROJECT_ROOT/bin/
   - rm -f bin/rails
   - bundle exec rails --version
 
