Fix Rubocop offences (#2272)
* Fix Style/ExpandPathArguments cop

* Layout/SpaceInsideBlockBraces

Offences count:
space: 51
no_space: 1395

* Style/PercentLiteralDelimiters

* Gemspec/OrderedDependencies

* Layout/ArgumentAlignment

Offences count:
with_first_argument: 13
with_fixed_indentation: 47

* Layout/BlockAlignment

Offences count:
either: 1
start_of_block: 4
start_of_line: 22

* Layout/ClosingHeredocIndentation

* Layout/DotPosition

Offences count:
leading: 34
trailing: 1

* Layout/EmptyLineAfterGuardClause

* Bundler/DuplicatedGem

* Layout/EmptyLines

* Layout/IndentationWidth

* Layout/SpaceAfterComma

* Layout/SpaceAroundEqualsInParameterDefault

Offenses count:
space: 3
no_space: 29

* Layout/SpaceBeforeBlockBraces

Offenses count:
space: 16
no_space: 52

* Layout/SpaceInsideHashLiteralBraces

Offenses count:
space: 73
no_space: 37
compact: 73

Set configuration for consistency:
`no_space` for non empty braces
`no_space` for empty braces

* Layout/SpaceInsideParens

Offenses count:
space: 5311
no_space: 24

* Lint/AmbiguousBlockAssociation

exclude `specs` folder

* Lint/AmbiguousOperator

exclude `Rakefile`

* Lint/AmbiguousRegexpLiteral

* Lint/DuplicateMethods

* Lint/SuppressedException

* Lint/UnderscorePrefixedVariableName

* Lint/UnusedBlockArgument

* Lint/UnusedMethodArgument

* Metrics/ModuleLength

* Metrics/ParameterLists

* Naming/HeredocDelimiterCase

* Style/BarePercentLiterals

* Style/BracesAroundHashParameters

* Style/ClassAndModuleChildren

* Style/CommentedKeyword

* Style/Encoding

* Style/GlobalVars

* Style/HashSyntax

* Style/InverseMethods

* Style/Lambda

* Style/LineEndConcatenation

* Style/NegatedIf

* Style/NumericLiterals

* Style/Proc

* Style/RaiseArgs

* Style/RedundantPercentQ

* Style/Semicolon

* Style/SingleLineMethods

Use exclude since auto-correction causes spec fail:
`rspec ./s

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,13 +4,20 @@ inherit_from:
 AllCops:
   Exclude:
     # Templates are really ERB which Rubocop does not parse
-    - 'lib/generators/rspec/*/templates/**/*'
+    - bin/**/*
+    - lib/generators/rspec/*/templates/**/*
+
+Bundler/DuplicatedGem:
+  Enabled: false
 
 Layout/AccessModifierIndentation:
   Enabled: false
 
 Layout/AssignmentIndentation:
   Enabled: false
+
+Layout/BlockAlignment:
+  EnforcedStyleAlignWith: start_of_block
 
 Layout/ClosingParenthesisIndentation:
   Enabled: false
@@ -54,12 +61,19 @@ Layout/MultilineOperationIndentation:
 Layout/ParameterAlignment:
   EnforcedStyle: with_first_parameter
 
+Layout/SpaceInsideHashLiteralBraces:
+  EnforcedStyle: no_space
+  EnforcedStyleForEmptyBraces: no_space
+
 Layout/SpaceInsidePercentLiteralDelimiters:
   Enabled: false
 
 # We use spaces, so it's less of a change to stick with that.
 Layout/SpaceAroundEqualsInParameterDefault:
   EnforcedStyle: space
+
+Layout/SpaceInsideBlockBraces:
+  EnforcedStyleForEmptyBraces: space
 
 Layout/SpaceAroundBlockParameters:
   Enabled: false
@@ -73,8 +87,28 @@ Layout/SpaceBeforeComma:
 Layout/SpaceInsideStringInterpolation:
   Enabled: false
 
+Lint/AmbiguousBlockAssociation:
+  Exclude:
+    - spec/**/*
+
+Lint/AmbiguousOperator:
+  Exclude:
+    - Rakefile
+
+Lint/AmbiguousRegexpLiteral:
+  Exclude:
+    - features/step_definitions/additional_cli_steps.rb
+
 Lint/AssignmentInCondition:
   Enabled: false
+
+Lint/DuplicateMethods:
+  Exclude:
+    - example_app_generator/no_active_record/app/models/in_memory/model.rb
+
+Lint/NonDeterministicRequireOrder:
+  Exclude:
+    - spec/spec_helper.rb
 
 Lint/EmptyExpression:
   Enabled: false
@@ -94,6 +128,8 @@ Lint/SuppressedException:
     # RSpec is tightly coupled to capybara right now, this should be
     # re-evaluted in the future. For now we allow the empty rescue
     - lib/rspec/rails/vendor/capybara.rb
+    - example_app_generator/generate_stuff.rb
+    - example_app_generator/spec/support/default_preview_path
 
 Metrics/AbcSize:
   Enabled: false
@@ -107,6 +143,14 @@ Metrics/ClassLength:
 
 Metrics/PerceivedComplexity:
   Enabled: false
+
+Metrics/ModuleLength:
+  Exclude:
+    - spec/**/*
+
+Metrics/ParameterLists:
+  Exclude:
+    - example_app_generator/spec/verify_custom_renderers_spec.rb
 
 # Who cares what we call the argument for binary operator methods?
 Naming/BinaryOperatorParameterName:
@@ -162,8 +206,15 @@ Style/BlockDelimiters:
 Style/CaseEquality:
   Enabled: false
 
+Style/ClassAndModuleChildren:
+  Enabled: false
+
 Style/ClassCheck:
   Enabled: false
+
+Style/CommentedKeyword:
+  Exclude:
+    - spec/rspec/rails/example/view_example_group_spec.rb
 
 Style/ConditionalAssignment:
   Enabled: false
@@ -198,8 +249,21 @@ Style/FormatStringToken:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Style/GlobalVars:
+  Exclude:
+    - spec/support/shared_examples.rb
+
 Style/GuardClause:
   Enabled: false
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
 
 Style/IdenticalConditionalBranches:
   Enabled: false
@@ -237,6 +301,13 @@ Style/NestedModifier:
 Style/NestedParenthesizedCalls:
   Enabled: false
 
+Style/NumericLiterals:
+  Exclude:
+    - spec/rspec/rails/matchers/action_cable/have_stream_spec.rb
+
+Style/NumericLiteralPrefix:
+  EnforcedOctalStyle: zero_only
+
 Style/NumericPredicate:
   Enabled: false
 
@@ -258,6 +329,13 @@ Style/PercentLiteralDelimiters:
     '%W': '[]'    # array of double-quoted strings
     '%x': ()      # a shell command as a string
 
+Style/RaiseArgs:
+  Exclude:
+    - spec/rspec/rails/matchers/be_routable_spec.rb
+    - spec/rspec/rails/matchers/have_rendered_spec.rb
+    - spec/rspec/rails/matchers/redirect_to_spec.rb
+    - spec/rspec/rails/matchers/route_to_spec.rb
+
 Style/RegexpLiteral:
   Enabled: false
 
@@ -273,6 +351,16 @@ Style/RescueStandardError:
 # We haven't adopted the `fail` to signal exceptions vs `raise` for re-raises convention.
 Style/SignalException:
   Enabled: false
+
+Style/SingleLineMethods:
+  Exclude:
+    - spec/rspec/rails/example/controller_example_group_spec.rb
+    - spec/rspec/rails/matchers/active_job_spec.rb
+    - spec/rspec/rails/matchers/be_a_new_spec.rb
+    - spec/rspec/rails/matchers/has_spec.rb
+    - spec/rspec/rails/matchers/have_enqueued_mail_spec.rb
+    - spec/rspec/rails/matchers/have_rendered_spec.rb
+    - spec/rspec/rails/setup_and_teardown_adapter_spec.rb
 
 # This rule favors constant names from the English standard library which we don't load.
 Style/SpecialGlobalVars:
