Prevent error when installing chromedriver
We add some errors that lead to:

dpkg: error processing archive /tmp/google-chrome-stable_current_amd64.deb (--install):
 subprocess dpkg-deb --control returned error exit status 2
Errors were encountered while processing:
 /tmp/google-chrome-stable_current_amd64.deb

This addition fix the error and install properly chromedriver

Related:

https://github.com/travis-ci/travis-ci/issues/9361

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ addons:
   chrome: stable
   apt:
     packages:
+      - dpkg
       - chromium-chromedriver
 
 # We deviate from the rspec-dev cache setting here.
