--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,6 @@ language: ruby
 sudo: required
 addons:
   chrome: stable
-  apt:
-    packages:
-      - dpkg
-      - chromium-chromedriver
 
 # We deviate from the rspec-dev cache setting here.
 #
@@ -29,6 +25,7 @@ cache: bundler
 bundler_args: "--binstubs --path ../bundle --retry=3 --jobs=3"
 
 before_install:
+  - script/install_chrome_driver
   - script/update_rubygems_and_install_bundler
   - script/clone_all_rspec_repos
 
@@ -36,7 +33,6 @@ before_script:
   # Rails 4+ complains with a bundler rails binstub in PROJECT_ROOT/bin/
   - rm -f bin/rails
   - bundle exec rails --version
-  - ln -s /usr/lib/chromium-browser/chromedriver ~/bin/chromedriver
 
 script: "script/run_build 2>&1"
 
