--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,9 @@ matrix:
         - RAILS_VERSION='~> 6.0.0'
         - JRUBY_OPT=--dev
         - JAVA_OPTS="--add-opens java.base/sun.nio.ch=org.jruby.dist --add-opens java.base/java.io=org.jruby.dist --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.security.cert=ALL-UNNAMED --add-opens=java.base/java.util.zip=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util.regex=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED  --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/javax.crypto=ALL-UNNAMED --add-opens=java.management/sun.management=ALL-UNNAMED"
+    - rvm: ruby-3.0.0-preview1
+      env: RAILS_VERSION='~> 6.0.0'
+      allow_failure: true
     - rvm: 2.7.1
       env: RAILS_VERSION='~> 6.0.0'
     - rvm: 2.6.6
