--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,9 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: false
       - run: script/update_rubygems_and_install_bundler
+        env: ${{ matrix.env }}
       - run: script/clone_all_rspec_repos
+        env: ${{ matrix.env }}
       - run: bundle install --binstubs && script/run_build
         env: ${{ matrix.env }}
         continue-on-error: ${{ matrix.allow_failure || false }}
