--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
        include:
          # Rails 6.0 builds >= 2.5.0
-         - ruby: 3.0.0-rc1
+         - ruby: 3.0
            env:
              RAILS_VERSION: '~> 6.0.0'
          - ruby: 2.7
