--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,3 +1,3 @@
-default: --require features --format progress --tags ~@wip
-pretty:  --require features --format pretty   --tags ~@wip
+default: --require features --format progress --tags 'not @wip'
+pretty:  --require features --format pretty   --tags 'not @wip'
 wip:     --require features --tags @wip
