--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@
 
 version: "{build}"
 
-# This will build all PRs targetting matching branches.
+# This will build all PRs targeting matching branches.
 # Without this, each PR builds twice -- once for the PR branch HEAD,
 # and once for the merge commit that github creates for each mergable PR.
 branches:
