Use "mergeable" instead of "mergable"

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ version: "{build}"
 
 # This will build all PRs targeting matching branches.
 # Without this, each PR builds twice -- once for the PR branch HEAD,
-# and once for the merge commit that github creates for each mergable PR.
+# and once for the merge commit that github creates for each mergeable PR.
 branches:
   only:
     - main
